k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-tracker-app
  namespace: fitness-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fitness-tracker-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: fitness-tracker-app
      annotations:
        ad.datadoghq.com/fitness-tracker-app.logs: >-
          [{"source":"nodejs","service":"fitness-tracker-service"},
           {"source":"nodejs","service":"fitness-tracker-app"}]
    spec:
      containers:
        - name: fitness-tracker-app
          image: pulkit197/fitness_tracker-master-copy3-fitness-app:latest
          ports:
            - containerPort: 5000
          resources:
            requests: 
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
          # ✔ All configMap vars removed
          # ✔ Direct env variables added
---

apiVersion: v1
kind: Service
metadata:
  name: fitness-tracker-service
  namespace: fitness-ns
spec:
  selector:
    app: fitness-tracker-app
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
