k8s/mongodb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: fitness-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:7-jammy
        ports:
        - containerPort: 27017
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "200m"
            memory: "512Mi"
      #   volumeMounts:
      #     - name: mongodb-data
      #       mountPath: /data/db 
      # volumes:
      #   - name: mongodb-data
      #     emptyDir: 
      #       sizeLimit: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: fitness-ns
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
  type: ClusterIP
